# fasttalk-tts-microservice

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  client.py  pyproject.toml
app/core/: __init__.py  audio_processor.py  backends.py  realtime_tts_handler.py  realtime_websocket_server.py  tts_service.py  websocket_launcher.py  websocket_server.py
app/legacy/: __init__.py  tts_service.py
app/monitoring/: __init__.py  monitoring_service.py  service_monitor.py
app/utils/: __init__.py  config.py  connection_manager.py  error_handler.py  logger.py
chatterbox/src/chatterbox/: __init__.py
input/: input.txt
models/: README.md
